--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
+    "fs": "^0.0.1-security",
     "undici": "^4.16.0"
   },
   "name": "nomorals",
   "description": "Find roblox bot alts.",
   "version": "1.0.0",
   "main": "main.js",
-  "devDependencies": {},
   "scripts": {
     "test": "node main.js"
   },
